--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 language: dart
-
-sudo: false
-
 dart:
+  # Install the latest stable release
   - stable
-  - dev
-  - 1.16.0
-
-cache:
-  directories:
-    - $HOME/.pub-cache
-
-script: ./tool/travis.sh
-
-before_install:
- - chmod +x ./tool/travis.sh
+dart_task:
+  - test: --exclude-tags no-xvfb
+    xvfb: false
+script:
+  - pub run test
+branches:
+  only:
+    - master
