RSA PKCS package has now been re-published for Dart 2.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
   crypto: '^2.0.1'
   pointycastle:
     git: https://github.com/shamblett/pointycastle.git
-  rsa_pkcs:
-    git: https://github.com/amaurel/rsa_pkcs.git
+  rsa_pkcs: '^1.1.0'
   collection: '^1.14.11'
 
 dev_dependencies:
