--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: just_jwt
 description: A JWT library for Dart.
-version: 2.0.0
+version: 3.0.0
 author: Tomas Szabo <tomas.szabo@deftomat.com>
 homepage: https://github.com/deftomat/JustJWT
 
 environment:
-  sdk: '>=2.0.0-dev <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  crypto: '^2.0.1'
+  crypto: '^3.0.0'
   pointycastle:
     git: https://github.com/shamblett/pointycastle.git
-  rsa_pkcs: '^1.1.0'
-  collection: '^1.14.11'
+  rsa_pkcs: '^1.1.4'
+  collection: '^1.15.0'
 
 dev_dependencies:
-  test: '^1.3.4'
+  test: '^1.16.8'
